# clockodo-cli

./: Cargo.toml  LICENSE  README.md
src/: config.rs  list_projects.rs  list_services.rs  login.rs  main.rs  start.rs  status.rs  stop.rs
src/api/: mod.rs
src/api/client/: mod.rs  stopclock.rs
