[package]
name = "clockodo-cli"
version = "0.1.0"
edition = "2021"
description = "Simple CLI tool to control Clockodo's time-tracking stopwatch"
repository = "https://github.com/zortax/clockodo-cli"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "7.3"
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
chrono = "0.4"
